changes on swagger and users
