# controllers/users.js
@@ -1,83 +1,86 @@
 const mongodb = require('../data/database.js');
 const { ObjectId } = require('mongodb');
 
-const getALL = async (req, res) => {
-    //#swagger.tags = ['Users']
-    const result = await mongodb.getDatabase().db().collection('users').find();
-    result.toArray().then((users) => {
-        res.setHeader('Content-Type', 'application/json');
+const getAll = async (req, res) => {
+    try {
+        const users = await mongodb.getDatabase().db().collection('users').find().toArray();
         res.status(200).json(users);
-    }).catch((error) => {
+    } catch (error) {
         res.status(500).json({ message: "Failed to retrieve users", error });
-    });
+    }
 };
 
 const getSingle = async (req, res) => {
-    //#swagger.tags = ['Users']
     try {
-        const userID = new ObjectId(req.params.id);
-        const user = await mongodb.getDatabase().db().collection('users').findOne({ _id: userID });
+        const userId = new ObjectId(req.params.id);
+        const user = await mongodb.getDatabase().db().collection('users').findOne({ _id: userId });
 
-        if (!user) {
-            return res.status(404).json({ message: "User not found" });
-        }
+        if (!user) return res.status(404).json({ message: "User not found" });
 
-        res.setHeader('Content-Type', 'application/json');
         res.status(200).json(user);
     } catch (error) {
         res.status(500).json({ message: "Error retrieving user", error });
     }
 };
 
-const createUser = async (req, res) => { 
-    //#swagger.tags = ['Users']
-    const user = {
-        firstName : req.body.firstName,
-        lastName : req.body.lastName,
-        email : req.body.email, 
-        favoriteColor : req.body.favoriteColor,
-        birthday : req.body.birthday
-    };
-    const response = await mongodb.getDatabase().db().collection('users').insertOne(user);
-    if (response.modifiedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user. ');
+const createUser = async (req, res) => {
+    try {
+        const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
+            email: req.body.email,
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
+        };
+
+        const response = await mongodb.getDatabase().db().collection('users').insertOne(user);
+
+        if (!response.insertedId) {
+            return res.status(500).json({ message: "Failed to create user" });
+        }
+
+        res.status(201).json({ message: "User created successfully", userId: response.insertedId });
+    } catch (error) {
+        res.status(500).json({ message: "Error creating user", error });
     }
 };
 
- const updateUser = async (req, res) => {
-    //#swagger.tags = ['Users']
-    const userId = new ObjectId(req.params.id);
-    const user = {
-        username: req.body.username,
-        email: req.body.email,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress,
-    };
-    const response = await mongodb.getDatabase().db().collection('users').replaceOne({_id: userId}, user);
-    if (response.acknowledged) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user. ');
-    }
- }
+const updateUser = async (req, res) => {
+    try {
+        const userId = new ObjectId(req.params.id);
+        const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
+            email: req.body.email,
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
+        };
 
- const deleteUser = async (req, res) => {
-    //#swagger.tags = ['Users']
-    const userId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('users').deleteOne({_id: userId});
-    if (response.deletedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user. ');
-    }
- }
+        const response = await mongodb.getDatabase().db().collection('users').updateOne({ _id: userId }, { $set: user });
 
-module.exports = {
-    getALL,
-    getSingle,
-    createUser,
-    updateUser,
-    deleteUser
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ message: "User not found" });
+        }
+
+        res.status(200).json({ message: "User updated successfully" });
+    } catch (error) {
+        res.status(500).json({ message: "Error updating user", error });
+    }
 };
+
+const deleteUser = async (req, res) => {
+    try {
+        const userId = new ObjectId(req.params.id);
+        const response = await mongodb.getDatabase().db().collection('users').deleteOne({ _id: userId });
+
+        if (response.deletedCount === 0) {
+            return res.status(404).json({ message: "User not found" });
+        }
+
+        res.status(200).json({ message: "User deleted successfully" });
+    } catch (error) {
+        res.status(500).json({ message: "Error deleting user", error });
+    }
+};
+
+module.exports = { getAll, getSingle, createUser, updateUser, deleteUser };
